--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "chart.js": "^3.5.1",
+    "chartjs-adapter-moment": "^1.0.0",
+    "leaflet": "^1.7.1",
+    "moment": "^2.29.1",
     "numeral": "^2.0.6",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
+    "react-leaflet": "^3.2.1",
+    "react-map-gl": "^6.1.17",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
@@ -27,16 +32,9 @@
       "react-app/jest"
     ]
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ]
 }
